test/logs.txt
In file included from ../set_tests/operator >=.cpp:2:
In file included from ../set_tests/__service.ipp:3:
../set_tests/../../../set.tpp:251:81: error: 'this' argument to member function 'minimum' has type 'const ft::set<int, std::__1::less<int>, std::__1::allocator<int> >', but function is not marked const
        const_iterator          begin()     const   {__INFOIT__ return iterator(this->minimum(_root), this); };
                                                                                ^~~~
../set_tests/../../../set.tpp:898:48: note: in instantiation of member function 'ft::set<int, std::__1::less<int>, std::__1::allocator<int> >::begin' requested here
        return ft::lexicographical_compare(lhs.begin(), lhs.end(),
                                               ^
../set_tests/../../../set.tpp:912:102: note: in instantiation of function template specialization 'ft::operator<<int, std::__1::less<int>, std::__1::allocator<int> >' requested here
                            const ft::set< Key, Compare, Allocator >& rhs ) {__INFONM__ return !(lhs < rhs); };
                                                                                                     ^
../set_tests/operator >=.cpp:19:27: note: in instantiation of function template specialization 'ft::operator>=<int, std::__1::less<int>, std::__1::allocator<int> >' requested here
        result2.push_back(st.st1 >= st.st1); result2.push_back(st.st3 >= st.st3); result2.push_back(st.st5 >= st.st9);
                                 ^
../set_tests/../../../set.tpp:648:16: note: 'minimum' declared here
        _node* minimum(_node* node) {
               ^
../set_tests/../../../set.tpp:255:81: error: 'this' argument to member function 'maximum' has type 'const ft::set<int, std::__1::less<int>, std::__1::allocator<int> >', but function is not marked const
        const_iterator          end()       const   {__INFOIT__ return iterator(this->maximum(_nul), this); };
                                                                                ^~~~
../set_tests/../../../set.tpp:898:61: note: in instantiation of member function 'ft::set<int, std::__1::less<int>, std::__1::allocator<int> >::end' requested here
        return ft::lexicographical_compare(lhs.begin(), lhs.end(),
                                                            ^
../set_tests/../../../set.tpp:912:102: note: in instantiation of function template specialization 'ft::operator<<int, std::__1::less<int>, std::__1::allocator<int> >' requested here
                            const ft::set< Key, Compare, Allocator >& rhs ) {__INFONM__ return !(lhs < rhs); };
                                                                                                     ^
../set_tests/operator >=.cpp:19:27: note: in instantiation of function template specialization 'ft::operator>=<int, std::__1::less<int>, std::__1::allocator<int> >' requested here
        result2.push_back(st.st1 >= st.st1); result2.push_back(st.st3 >= st.st3); result2.push_back(st.st5 >= st.st9);
                                 ^
../set_tests/../../../set.tpp:641:16: note: 'maximum' declared here
        _node* maximum(_node* node) {
               ^
../set_tests/../../../set.tpp:251:81: error: 'this' argument to member function 'minimum' has type 'const ft::set<std::__1::basic_string<char>, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<std::__1::basic_string<char> > >', but function is not marked const
        const_iterator          begin()     const   {__INFOIT__ return iterator(this->minimum(_root), this); };
                                                                                ^~~~
../set_tests/../../../set.tpp:898:48: note: in instantiation of member function 'ft::set<std::__1::basic_string<char>, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<std::__1::basic_string<char> > >::begin' requested here
        return ft::lexicographical_compare(lhs.begin(), lhs.end(),
                                               ^
../set_tests/../../../set.tpp:912:102: note: in instantiation of function template specialization 'ft::operator<<std::__1::basic_string<char>, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<std::__1::basic_string<char> > >' requested here
                            const ft::set< Key, Compare, Allocator >& rhs ) {__INFONM__ return !(lhs < rhs); };
                                                                                                     ^
../set_tests/operator >=.cpp:19:101: note: in instantiation of function template specialization 'ft::operator>=<std::__1::basic_string<char>, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<std::__1::basic_string<char> > >' requested here
        result2.push_back(st.st1 >= st.st1); result2.push_back(st.st3 >= st.st3); result2.push_back(st.st5 >= st.st9);
                                                                                                           ^
../set_tests/../../../set.tpp:648:16: note: 'minimum' declared here
        _node* minimum(_node* node) {
               ^
../set_tests/../../../set.tpp:255:81: error: 'this' argument to member function 'maximum' has type 'const ft::set<std::__1::basic_string<char>, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<std::__1::basic_string<char> > >', but function is not marked const
        const_iterator          end()       const   {__INFOIT__ return iterator(this->maximum(_nul), this); };
                                                                                ^~~~
../set_tests/../../../set.tpp:898:61: note: in instantiation of member function 'ft::set<std::__1::basic_string<char>, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<std::__1::basic_string<char> > >::end' requested here
        return ft::lexicographical_compare(lhs.begin(), lhs.end(),
                                                            ^
../set_tests/../../../set.tpp:912:102: note: in instantiation of function template specialization 'ft::operator<<std::__1::basic_string<char>, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<std::__1::basic_string<char> > >' requested here
                            const ft::set< Key, Compare, Allocator >& rhs ) {__INFONM__ return !(lhs < rhs); };
                                                                                                     ^
../set_tests/operator >=.cpp:19:101: note: in instantiation of function template specialization 'ft::operator>=<std::__1::basic_string<char>, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<std::__1::basic_string<char> > >' requested here
        result2.push_back(st.st1 >= st.st1); result2.push_back(st.st3 >= st.st3); result2.push_back(st.st5 >= st.st9);
                                                                                                           ^
../set_tests/../../../set.tpp:641:16: note: 'maximum' declared here
        _node* maximum(_node* node) {
               ^
4 errors generated.
ator(save, *this);
                   ^        ~~~~~~~~~~~
../set_tests/../../../set.tpp:487:34: note: in instantiation of member function 'ft::set<int, std::__1::less<int>, std::__1::allocator<int> >::lower_bound' requested here
            return ft::make_pair(lower_bound(key), upper_bound(key));
                                 ^
../set_tests/equal_range().cpp:37:83: note: in instantiation of member function 'ft::set<int, std::__1::less<int>, std::__1::allocator<int> >::equal_range' requested here
    const _pair<_set<int>::const_iterator , _set<int>::const_iterator>& pair = st.equal_range(10);
                                                                                  ^
../set_tests/equal_range().cpp:52:68: note: in instantiation of function template specialization 'equal_range_test<int>' requested here
    exit(run_set_unit_test<int>("equal_range()", equal_range_test, equal_range_test));
                                                                   ^
../set_tests/../../../set.tpp:131:22: note: candidate constructor not viable: no known conversion from 'ft::set<int, std::__1::less<int>, std::__1::allocator<int> >' to 'set<int, std::__1::less<int>, std::__1::allocator<int> > *' for 2nd argument; remove *
            explicit iterator(_node* tmp, set<Key, Compare, Allocator>* set ) : __node(tmp), __set(set) { };
                     ^
../set_tests/../../../set.tpp:133:13: note: candidate constructor not viable: requires single argument 'other', but 2 arguments were provided
            iterator(const iterator &other) : __node(other.__node) , __set(other.__set){};
            ^
../set_tests/../../../set.tpp:129:13: note: candidate constructor not viable: requires 0 arguments, but 2 were provided
            iterator() : __node(nullptr), __set(nullptr){};
            ^
../set_tests/../../../set.tpp:510:66: error: no matching constructor for initialization of 'ft::set<int, std::__1::less<int>, std::__1::allocator<int> >::const_iterator' (aka 'const ft::set<int, std::__1::less<int>, std::__1::allocator<int> >::iterator')
        const_iterator lower_bound(const Key &key) const {return const_iterator(lower_bound(key), this); };
                                                                 ^              ~~~~~~~~~~~~~~~~~~~~~~
../set_tests/../../../set.tpp:516:30: note: in instantiation of member function 'ft::set<int, std::__1::less<int>, std::__1::allocator<int> >::lower_bound' requested here
            iterator save =  lower_bound(key);
                             ^
../set_tests/../../../set.tpp:487:52: note: in instantiation of member function 'ft::set<int, std::__1::less<int>, std::__1::allocator<int> >::upper_bound' requested here
            return ft::make_pair(lower_bound(key), upper_bound(key));
                                                   ^
../set_tests/equal_range().cpp:37:83: note: in instantiation of member function 'ft::set<int, std::__1::less<int>, std::__1::allocator<int> >::equal_range' requested here
    const _pair<_set<int>::const_iterator , _set<int>::const_iterator>& pair = st.equal_range(10);
                                                                                  ^
../set_tests/equal_range().cpp:52:68: note: in instantiation of function template specialization 'equal_range_test<int>' requested here
    exit(run_set_unit_test<int>("equal_range()", equal_range_test, equal_range_test));
                                                                   ^
../set_tests/../../../set.tpp:131:22: note: candidate constructor not viable: no known conversion from 'ft::set<int, std::__1::less<int>, std::__1::allocator<int> >::const_iterator' (aka 'const ft::set<int, std::__1::less<int>, std::__1::allocator<int> >::iterator') to 'ft::set<int, std::__1::less<int>, std::__1::allocator<int> >::_node *' (aka 'ft::setbase<int, std::__1::less<int>, std::__1::allocator<int> >::node *') for 1st argument
            explicit iterator(_node* tmp, set<Key, Compare, Allocator>* set ) : __node(tmp), __set(set) { };
                     ^
../set_tests/../../../set.tpp:133:13: note: candidate constructor not viable: requires single argument 'other', but 2 arguments were provided
            iterator(const iterator &other) : __node(other.__node) , __set(other.__set){};
            ^
../set_tests/../../../set.tpp:129:13: note: candidate constructor not viable: requires 0 arguments, but 2 were provided
            iterator() : __node(nullptr), __set(nullptr){};
            ^
6 errors generated.
